Updated components and fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 
 @import "tailwindcss";
 
+/* index.css ya App.css me */
+body {
+  overflow-x: hidden;
+}
 
 
 *{
